Fix for FF bug with z-index:-1

--- a/packages/ribbon/styles/screen.scss
+++ b/packages/ribbon/styles/screen.scss
@@ -366,6 +366,18 @@ body {
 					}
 				}
 			}
+		// Wrapper
+		> div {
+			&:before {
+				position:absolute;
+				top:0;
+				right:0;
+				bottom:0;
+				left:0;
+				z-index:2;
+				content:'';
+				}
+			}
 		// Presenter Notes
 		footer {
 			position:absolute;
